--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-08 14:44 -->
+<!-- 2022-12-09 02:43 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,50 +46,50 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgbc1c51f">1. 妙妙文章</a>
+<li><a href="#org1fa9f3d">1. 妙妙文章</a>
 <ul>
-<li><a href="#org922a6b9">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org8dd8f88">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org8d4f546">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgd59beeb">1.4. 关于编辑器</a></li>
-<li><a href="#org0600d92">1.5. 关于代码</a>
+<li><a href="#org4733474">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgd3cbee5">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org6cde24f">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org1238fce">1.4. 关于编辑器</a></li>
+<li><a href="#org825e1fc">1.5. 关于代码</a>
 <ul>
-<li><a href="#org9aa21cf">1.5.1. Lisp</a></li>
+<li><a href="#orge27ff60">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org1e0651e">1.6. 关于CPU</a></li>
-<li><a href="#orgc14b155">1.7. 关于算法</a>
+<li><a href="#org6facf16">1.6. 关于CPU</a></li>
+<li><a href="#org97453f4">1.7. 关于算法</a>
 <ul>
-<li><a href="#org06caf0d">1.7.1. 关于随机</a></li>
+<li><a href="#orgb7843ed">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgd6455bb">1.8. 关于AI</a></li>
-<li><a href="#orgea510e6">1.9. 关于软件 &#x2014; 面对复杂系统</a>
+<li><a href="#orgdc9c783">1.8. 关于AI</a></li>
+<li><a href="#org7a8aeea">1.9. 关于软件 &#x2014; 面对复杂系统</a>
 <ul>
-<li><a href="#org0d1a29a">1.9.1. Everything is a file</a></li>
-<li><a href="#org5702ecc">1.9.2. SQLite</a></li>
+<li><a href="#org1cf0bfc">1.9.1. Everything is a file</a></li>
+<li><a href="#org5c032f0">1.9.2. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org6077aa3">1.10. 关于workflow</a></li>
+<li><a href="#org6567a88">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgee4ef2b">2. 棒棒视频</a>
+<li><a href="#org37c0c70">2. 棒棒视频</a>
 <ul>
-<li><a href="#org83ff5db">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org228d4b6">2.2. 迷因水母</a></li>
-<li><a href="#org06d0f40">2.3. 纪录片</a></li>
-<li><a href="#org996291c">2.4. 各种剧</a></li>
-<li><a href="#orgfee9ed2">2.5. 电影</a></li>
+<li><a href="#orgb6d0dde">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgb4ef29a">2.2. 迷因水母</a></li>
+<li><a href="#org1e7d524">2.3. 纪录片</a></li>
+<li><a href="#orge5d183d">2.4. 各种剧</a></li>
+<li><a href="#orgfa5255b">2.5. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org77bb53a">3. 快乐游戏</a></li>
-<li><a href="#orga0b2bc3">4. 宝藏博主</a></li>
-<li><a href="#org10476f1">5. 有意思的</a>
+<li><a href="#org7c9253d">3. 快乐游戏</a></li>
+<li><a href="#orga0cdb50">4. 宝藏博主</a></li>
+<li><a href="#orgd74acab">5. 有意思的</a>
 <ul>
-<li><a href="#orga50efca">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org136bab4">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orgc1ac8d7">6. 我想玩的</a></li>
+<li><a href="#org4102bc7">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -98,8 +98,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgbc1c51f" class="outline-2">
-<h2 id="orgbc1c51f"><span class="section-number-2">1.</span> <a href="#orgbc1c51f">妙妙文章</a></h2>
+<div id="outline-container-org1fa9f3d" class="outline-2">
+<h2 id="org1fa9f3d"><span class="section-number-2">1.</span> <a href="#org1fa9f3d">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -434,7 +434,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org7955efb">
+<figure id="orgda47993">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -507,8 +507,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </ul>
 </div>
 
-<div id="outline-container-org922a6b9" class="outline-3">
-<h3 id="org922a6b9"><span class="section-number-3">1.1.</span> <a href="#org922a6b9">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org4733474" class="outline-3">
+<h3 id="org4733474"><span class="section-number-3">1.1.</span> <a href="#org4733474">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -549,8 +549,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </div>
 </div>
 
-<div id="outline-container-org8dd8f88" class="outline-3">
-<h3 id="org8dd8f88"><span class="section-number-3">1.2.</span> <a href="#org8dd8f88">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgd3cbee5" class="outline-3">
+<h3 id="orgd3cbee5"><span class="section-number-3">1.2.</span> <a href="#orgd3cbee5">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -584,8 +584,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org8d4f546" class="outline-3">
-<h3 id="org8d4f546"><span class="section-number-3">1.3.</span> <a href="#org8d4f546">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org6cde24f" class="outline-3">
+<h3 id="org6cde24f"><span class="section-number-3">1.3.</span> <a href="#org6cde24f">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -619,8 +619,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgd59beeb" class="outline-3">
-<h3 id="orgd59beeb"><span class="section-number-3">1.4.</span> <a href="#orgd59beeb">关于编辑器</a></h3>
+<div id="outline-container-org1238fce" class="outline-3">
+<h3 id="org1238fce"><span class="section-number-3">1.4.</span> <a href="#org1238fce">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -636,8 +636,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org0600d92" class="outline-3">
-<h3 id="org0600d92"><span class="section-number-3">1.5.</span> <a href="#org0600d92">关于代码</a></h3>
+<div id="outline-container-org825e1fc" class="outline-3">
+<h3 id="org825e1fc"><span class="section-number-3">1.5.</span> <a href="#org825e1fc">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -662,8 +662,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org9aa21cf" class="outline-4">
-<h4 id="org9aa21cf"><span class="section-number-4">1.5.1.</span> <a href="#org9aa21cf">Lisp</a></h4>
+<div id="outline-container-orge27ff60" class="outline-4">
+<h4 id="orge27ff60"><span class="section-number-4">1.5.1.</span> <a href="#orge27ff60">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -686,8 +686,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org1e0651e" class="outline-3">
-<h3 id="org1e0651e"><span class="section-number-3">1.6.</span> <a href="#org1e0651e">关于CPU</a></h3>
+<div id="outline-container-org6facf16" class="outline-3">
+<h3 id="org6facf16"><span class="section-number-3">1.6.</span> <a href="#org6facf16">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -702,8 +702,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orgc14b155" class="outline-3">
-<h3 id="orgc14b155"><span class="section-number-3">1.7.</span> <a href="#orgc14b155">关于算法</a></h3>
+<div id="outline-container-org97453f4" class="outline-3">
+<h3 id="org97453f4"><span class="section-number-3">1.7.</span> <a href="#org97453f4">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -722,8 +722,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org06caf0d" class="outline-4">
-<h4 id="org06caf0d"><span class="section-number-4">1.7.1.</span> <a href="#org06caf0d">关于随机</a></h4>
+<div id="outline-container-orgb7843ed" class="outline-4">
+<h4 id="orgb7843ed"><span class="section-number-4">1.7.1.</span> <a href="#orgb7843ed">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -737,8 +737,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgd6455bb" class="outline-3">
-<h3 id="orgd6455bb"><span class="section-number-3">1.8.</span> <a href="#orgd6455bb">关于AI</a></h3>
+<div id="outline-container-orgdc9c783" class="outline-3">
+<h3 id="orgdc9c783"><span class="section-number-3">1.8.</span> <a href="#orgdc9c783">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -748,8 +748,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgea510e6" class="outline-3">
-<h3 id="orgea510e6"><span class="section-number-3">1.9.</span> <a href="#orgea510e6">关于软件 &#x2014; 面对复杂系统</a></h3>
+<div id="outline-container-org7a8aeea" class="outline-3">
+<h3 id="org7a8aeea"><span class="section-number-3">1.9.</span> <a href="#org7a8aeea">关于软件 &#x2014; 面对复杂系统</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -760,8 +760,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org0d1a29a" class="outline-4">
-<h4 id="org0d1a29a"><span class="section-number-4">1.9.1.</span> <a href="#org0d1a29a">Everything is a file</a></h4>
+<div id="outline-container-org1cf0bfc" class="outline-4">
+<h4 id="org1cf0bfc"><span class="section-number-4">1.9.1.</span> <a href="#org1cf0bfc">Everything is a file</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 <a href="https://blog.sunfishcode.online/">sunfishcode</a> 的 "Everything Is A File" 系列博文
@@ -780,8 +780,8 @@ File, with an overall focus on system interface design.
 </div>
 </div>
 
-<div id="outline-container-org5702ecc" class="outline-4">
-<h4 id="org5702ecc"><span class="section-number-4">1.9.2.</span> <a href="#org5702ecc">SQLite</a></h4>
+<div id="outline-container-org5c032f0" class="outline-4">
+<h4 id="org5c032f0"><span class="section-number-4">1.9.2.</span> <a href="#org5c032f0">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-2">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -795,8 +795,8 @@ File, with an overall focus on system interface design.
 </div>
 </div>
 
-<div id="outline-container-org6077aa3" class="outline-3">
-<h3 id="org6077aa3"><span class="section-number-3">1.10.</span> <a href="#org6077aa3">关于workflow</a></h3>
+<div id="outline-container-org6567a88" class="outline-3">
+<h3 id="org6567a88"><span class="section-number-3">1.10.</span> <a href="#org6567a88">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -806,8 +806,8 @@ File, with an overall focus on system interface design.
 </div>
 </div>
 
-<div id="outline-container-orgee4ef2b" class="outline-2">
-<h2 id="orgee4ef2b"><span class="section-number-2">2.</span> <a href="#orgee4ef2b">棒棒视频</a></h2>
+<div id="outline-container-org37c0c70" class="outline-2">
+<h2 id="org37c0c70"><span class="section-number-2">2.</span> <a href="#org37c0c70">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -866,8 +866,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org83ff5db" class="outline-3">
-<h3 id="org83ff5db"><span class="section-number-3">2.1.</span> <a href="#org83ff5db">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgb6d0dde" class="outline-3">
+<h3 id="orgb6d0dde"><span class="section-number-3">2.1.</span> <a href="#orgb6d0dde">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -898,8 +898,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org228d4b6" class="outline-3">
-<h3 id="org228d4b6"><span class="section-number-3">2.2.</span> <a href="#org228d4b6">迷因水母</a></h3>
+<div id="outline-container-orgb4ef29a" class="outline-3">
+<h3 id="orgb4ef29a"><span class="section-number-3">2.2.</span> <a href="#orgb4ef29a">迷因水母</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><p>
@@ -914,8 +914,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org06d0f40" class="outline-3">
-<h3 id="org06d0f40"><span class="section-number-3">2.3.</span> <a href="#org06d0f40">纪录片</a></h3>
+<div id="outline-container-org1e7d524" class="outline-3">
+<h3 id="org1e7d524"><span class="section-number-3">2.3.</span> <a href="#org1e7d524">纪录片</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/35506331/">晚安机遇号</a> Oppy的15年</li>
@@ -923,8 +923,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org996291c" class="outline-3">
-<h3 id="org996291c"><span class="section-number-3">2.4.</span> <a href="#org996291c">各种剧</a></h3>
+<div id="outline-container-orge5d183d" class="outline-3">
+<h3 id="orge5d183d"><span class="section-number-3">2.4.</span> <a href="#orge5d183d">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-4">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -948,8 +948,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgfee9ed2" class="outline-3">
-<h3 id="orgfee9ed2"><span class="section-number-3">2.5.</span> <a href="#orgfee9ed2">电影</a></h3>
+<div id="outline-container-orgfa5255b" class="outline-3">
+<h3 id="orgfa5255b"><span class="section-number-3">2.5.</span> <a href="#orgfa5255b">电影</a></h3>
 <div class="outline-text-3" id="text-2-5">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -975,7 +975,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="org885b2fd">
+<figure id="org3498826">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -993,8 +993,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org77bb53a" class="outline-2">
-<h2 id="org77bb53a"><span class="section-number-2">3.</span> <a href="#org77bb53a">快乐游戏</a></h2>
+<div id="outline-container-org7c9253d" class="outline-2">
+<h2 id="org7c9253d"><span class="section-number-2">3.</span> <a href="#org7c9253d">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -1024,8 +1024,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orga0b2bc3" class="outline-2">
-<h2 id="orga0b2bc3"><span class="section-number-2">4.</span> <a href="#orga0b2bc3">宝藏博主</a></h2>
+<div id="outline-container-orga0cdb50" class="outline-2">
+<h2 id="orga0cdb50"><span class="section-number-2">4.</span> <a href="#orga0cdb50">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -1036,7 +1036,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orga9c9094">
+<figure id="org21600c0">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -1044,8 +1044,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org10476f1" class="outline-2">
-<h2 id="org10476f1"><span class="section-number-2">5.</span> <a href="#org10476f1">有意思的</a></h2>
+<div id="outline-container-orgd74acab" class="outline-2">
+<h2 id="orgd74acab"><span class="section-number-2">5.</span> <a href="#orgd74acab">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1071,8 +1071,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orga50efca" class="outline-3">
-<h3 id="orga50efca"><span class="section-number-3">5.1.</span> <a href="#orga50efca">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org136bab4" class="outline-3">
+<h3 id="org136bab4"><span class="section-number-3">5.1.</span> <a href="#org136bab4">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1084,8 +1084,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orgc1ac8d7" class="outline-2">
-<h2 id="orgc1ac8d7"><span class="section-number-2">6.</span> <a href="#orgc1ac8d7">我想玩的</a></h2>
+<div id="outline-container-org4102bc7" class="outline-2">
+<h2 id="org4102bc7"><span class="section-number-2">6.</span> <a href="#org4102bc7">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1108,7 +1108,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-08 10:53</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 14:44</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-09 02:43</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/collections/index.org">index.org</a></td></tr>
 </table>
