--- a/content/picore-adb.html
+++ b/content/picore-adb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-08 14:44 -->
+<!-- 2022-12-09 02:43 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>piCore 编译 ADB 小记</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org5eeb081">1. 烧录 piCore</a></li>
-<li><a href="#orga9a56ca">2. 基本配置</a></li>
-<li><a href="#org8ef855b">3. 各种依赖</a>
+<li><a href="#orgce5ae1d">1. 烧录 piCore</a></li>
+<li><a href="#orgdec49d6">2. 基本配置</a></li>
+<li><a href="#org6a9b028">3. 各种依赖</a>
 <ul>
-<li><a href="#org7a5fe2e">3.1. protobuf</a></li>
-<li><a href="#org2db0062">3.2. brotli</a></li>
-<li><a href="#org701616b">3.3. GoogleTest</a></li>
-<li><a href="#org74d6846">3.4. Go</a></li>
+<li><a href="#org0bb963a">3.1. protobuf</a></li>
+<li><a href="#org56688d6">3.2. brotli</a></li>
+<li><a href="#org31a005e">3.3. GoogleTest</a></li>
+<li><a href="#orga88bbc4">3.4. Go</a></li>
 </ul>
 </li>
-<li><a href="#org67cb14c">4. 编译 ADB</a></li>
-<li><a href="#orgbc34561">5. 内网穿透</a></li>
-<li><a href="#org9620c78">6. 小结</a></li>
+<li><a href="#orgef41a2d">4. 编译 ADB</a></li>
+<li><a href="#orgdb2f49e">5. 内网穿透</a></li>
+<li><a href="#org8924d45">6. 小结</a></li>
 </ul>
 </div>
 </nav>
@@ -85,8 +85,8 @@
 然后交叉编译啥的就更不会了😵
 </p>
 
-<div id="outline-container-org5eeb081" class="outline-2">
-<h2 id="org5eeb081"><span class="section-number-2">1.</span> <a href="#org5eeb081">烧录 piCore</a></h2>
+<div id="outline-container-orgce5ae1d" class="outline-2">
+<h2 id="orgce5ae1d"><span class="section-number-2">1.</span> <a href="#orgce5ae1d">烧录 piCore</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Tiny Core 目前的版本是 13.X, 在<a href="http://tinycorelinux.net/downloads.html">官网的下载页面</a>底部有各种移植版的<a href="http://tinycorelinux.net/ports.html">下载页面</a>.
@@ -130,8 +130,8 @@ Device     Boot  Start    End Sectors Size Id Type
 </div>
 </div>
 
-<div id="outline-container-orga9a56ca" class="outline-2">
-<h2 id="orga9a56ca"><span class="section-number-2">2.</span> <a href="#orga9a56ca">基本配置</a></h2>
+<div id="outline-container-orgdec49d6" class="outline-2">
+<h2 id="orgdec49d6"><span class="section-number-2">2.</span> <a href="#orgdec49d6">基本配置</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 登录后, 有两个最重要的事情
@@ -254,8 +254,8 @@ sudo sed -i <span style="font-style: italic;">'/tc/s_/bin/sh_/bin/bash_'</span> 
 </div>
 </div>
 
-<div id="outline-container-org8ef855b" class="outline-2">
-<h2 id="org8ef855b"><span class="section-number-2">3.</span> <a href="#org8ef855b">各种依赖</a></h2>
+<div id="outline-container-org6a9b028" class="outline-2">
+<h2 id="org6a9b028"><span class="section-number-2">3.</span> <a href="#org6a9b028">各种依赖</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 准备 ADB 需要的<a href="https://github.com/nmeum/android-tools#dependencies">依赖</a>, 有的可以用 <code>tce-load</code> 直接下载
@@ -274,8 +274,8 @@ sudo sed -i <span style="font-style: italic;">'/tc/s_/bin/sh_/bin/bash_'</span> 
 </p>
 </div>
 
-<div id="outline-container-org7a5fe2e" class="outline-3">
-<h3 id="org7a5fe2e"><span class="section-number-3">3.1.</span> <a href="#org7a5fe2e">protobuf</a></h3>
+<div id="outline-container-org0bb963a" class="outline-3">
+<h3 id="org0bb963a"><span class="section-number-3">3.1.</span> <a href="#org0bb963a">protobuf</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 安装方法见 <a href="https://github.com/protocolbuffers/protobuf/blob/main/src/README.md">README</a>, 下载源码 <a href="https://github.com/protocolbuffers/protobuf/releases/download/v21.4/protobuf-cpp-3.21.4.tar.gz"><code>protobuf-cpp-3.21.4.tar.gz</code></a> 编译
@@ -309,8 +309,8 @@ mksquashfs dest-protobuf/ tbt-protobuf-3.21.4.tcz
 </div>
 </div>
 
-<div id="outline-container-org2db0062" class="outline-3">
-<h3 id="org2db0062"><span class="section-number-3">3.2.</span> <a href="#org2db0062">brotli</a></h3>
+<div id="outline-container-org56688d6" class="outline-3">
+<h3 id="org56688d6"><span class="section-number-3">3.2.</span> <a href="#org56688d6">brotli</a></h3>
 <div class="outline-text-3" id="text-3-2">
 <p>
 从 <a href="https://github.com/google/brotli">repo</a> 下载 <a href="https://github.com/google/brotli/archive/refs/tags/v1.0.9.tar.gz"><code>brotli-1.0.9.tar.gz</code></a> 编译打包
@@ -332,8 +332,8 @@ mv tbt-brotli-1.0.9.tcz /mnt/mmcblk0p2/tce/optional/
 </div>
 </div>
 
-<div id="outline-container-org701616b" class="outline-3">
-<h3 id="org701616b"><span class="section-number-3">3.3.</span> <a href="#org701616b">GoogleTest</a></h3>
+<div id="outline-container-org31a005e" class="outline-3">
+<h3 id="org31a005e"><span class="section-number-3">3.3.</span> <a href="#org31a005e">GoogleTest</a></h3>
 <div class="outline-text-3" id="text-3-3">
 <p>
 从 <a href="https://github.com/google/googletest">repo</a> 下载 <a href="https://github.com/google/googletest/archive/refs/tags/release-1.12.1.tar.gz"><code>googletest-release-1.12.1.tar.gz</code></a> , 根据 <a href="https://github.com/google/googletest/blob/main/googletest/README.md">README</a> 编译打包
@@ -366,8 +366,8 @@ mv tbt-googletest-1.12.1.tcz /mnt/mmcblk0p2/tce/optional/
 </div>
 </div>
 
-<div id="outline-container-org74d6846" class="outline-3">
-<h3 id="org74d6846"><span class="section-number-3">3.4.</span> <a href="#org74d6846">Go</a></h3>
+<div id="outline-container-orga88bbc4" class="outline-3">
+<h3 id="orga88bbc4"><span class="section-number-3">3.4.</span> <a href="#orga88bbc4">Go</a></h3>
 <div class="outline-text-3" id="text-3-4">
 <p>
 从<a href="https://go.dev/dl/">这里</a>下载已经编译好的 Go 语言工具链 (<a href="https://go.dev/dl/go1.19.linux-armv6l.tar.gz"><code>go1.19.linux-armv6l.tar.gz</code></a>).
@@ -395,8 +395,8 @@ mv tbt-googletest-1.12.1.tcz /mnt/mmcblk0p2/tce/optional/
 </div>
 </div>
 
-<div id="outline-container-org67cb14c" class="outline-2">
-<h2 id="org67cb14c"><span class="section-number-2">4.</span> <a href="#org67cb14c">编译 ADB</a></h2>
+<div id="outline-container-orgef41a2d" class="outline-2">
+<h2 id="orgef41a2d"><span class="section-number-2">4.</span> <a href="#orgef41a2d">编译 ADB</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 从 <a href="https://github.com/nmeum/android-tools">repo</a> 下载 release <a href="https://github.com/nmeum/android-tools/releases/download/31.0.3p2/android-tools-31.0.3p2.tar.xz"><code>android-tools-31.0.3p2.tar.xz</code></a>
@@ -447,8 +447,8 @@ tce-load -i tbt-android-tools-31.0.3p2.tcz
 </div>
 </div>
 
-<div id="outline-container-orgbc34561" class="outline-2">
-<h2 id="orgbc34561"><span class="section-number-2">5.</span> <a href="#orgbc34561">内网穿透</a></h2>
+<div id="outline-container-orgdb2f49e" class="outline-2">
+<h2 id="orgdb2f49e"><span class="section-number-2">5.</span> <a href="#orgdb2f49e">内网穿透</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 为了远程访问方便, 加一个 frp 的包.
@@ -541,8 +541,8 @@ mv tbt-frp-0.44.0.tcz /mnt/mmcblk0p2/tce/optional/
 </div>
 </div>
 
-<div id="outline-container-org9620c78" class="outline-2">
-<h2 id="org9620c78"><span class="section-number-2">6.</span> <a href="#org9620c78">小结</a></h2>
+<div id="outline-container-org8924d45" class="outline-2">
+<h2 id="org8924d45"><span class="section-number-2">6.</span> <a href="#org8924d45">小结</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 感觉用 piCore 再自己编译打包各种东西着实有点麻烦了,
@@ -567,7 +567,7 @@ mv tbt-frp-0.44.0.tcz /mnt/mmcblk0p2/tce/optional/
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-08-09 23:51</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-05 22:13</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 14:44</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-09 02:43</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/picore-adb.org">picore-adb.org</a></td></tr>
 </table>
